<resources>
    <string name="app_name">Calculator</string>
    <string name="title_activity_calculator">Calculator</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="percent">%</string>
    <string name="clear">C</string>
    <string name="back">B</string>
    <string name="divide">/</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="multiply">x</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="subtract">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_0">0</string>
    <string name="equals">=</string>
    <string name="decimal">.</string>
    <string name="add">+</string>
    <string name="tvCalc"></string>
    <string name="tvExpression"></string>
</resources>